--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -4,7 +4,8 @@
         <title>Index</title>
     </head>
     <body>
-<h1>Index</h1>
+        <h1>Index</h1>
+        <p>Hello World!</p>
     </body>
 	
 </html>
