Updating index.html
Now written the fact that the index page will be the login page!

--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Index</h1>
         <p>Hello World!</p>
+        <p>This page will be the log-in page for the site (I guess???).</p>
     </body>
 	
 </html>
