Creating Folders and CSS
Now have a CSS file for the index page (and is like) and folders for images, css, and javascript.

--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< Updated upstream
     <head>
         <title>Index</title>
+        <link rel="stylesheet" href="css/loginStyle.css">
     </head>
     <body>
         <h1>Log In</h1>
@@ -11,4 +11,4 @@
     </body>
 	
 </html>
-=======
+
