Labelling HTML files

--- a/public/documents/logIn.html
+++ b/public/documents/logIn.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Error</title>
+    <title>p5</title>
   </head>
   <body>
-    <h1>Error</h1>
+    <h1>p5</h1>
   </body>
 </html>
