--- a/public/documents/findJob.html
+++ b/public/documents/findJob.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Error</title>
+    <title>p2</title>
   </head>
   <body>
-    <h1>Error</h1>
+    <h1>p2</h1>
   </body>
 </html>
