--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -8,6 +8,7 @@
         <h1>Log In</h1>
         <p>Hello World!</p>
         <p>This page will be the log-in page for the site (I guess???).</p>
+        <p>please work for the love of god</p>
     </body>
 	
 </html>
