--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -5,9 +5,28 @@
     <link rel="stylesheet" href="css/loginStyle.css" />
   </head>
   <body>
-    <h1>Log In</h1>
-    <p>Hello World!</p>
-    <p>This page will be the log-in page for the site (I guess???).</p>
-    <p>please work for the love of god</p>
+    <nav>
+      <ul>
+        <li><a href="/">Report Job</a></li>
+        <li><a href="/">Find Job</a></li>
+        <li><a href="/">About Us</a></li>
+        <li><a href="/">How to</a></li>
+      </ul>
+    </nav>
+    <div class="container">
+      <div class="flex-box">
+        <h1 class="first">Log In</h1>
+        <p>Hello World!</p>
+        <p>This page will be the log-in page for the site (I guess???).</p>
+        <p>please work for the love of god</p>
+      </div>
+
+      <div class="flex-box">
+        <h1 class="first">Log In</h1>
+        <p>Hello World!</p>
+        <p>This page will be the log-in page for the site (I guess???).</p>
+        <p>please work for the love of god</p>
+      </div>
+    </div>
   </body>
 </html>
