--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -25,7 +25,7 @@
         <h1 class="first">Log In</h1>
         <p>Hello World!</p>
         <p>This page will be the log-in page for the site (I guess???).</p>
-        <p>please work for the love of god</p>
+        <p>Im making changes</p>
       </div>
     </div>
   </body>
