--- a/public/documents/index.html
+++ b/public/documents/index.html
@@ -7,26 +7,33 @@
   <body>
     <nav>
       <ul>
+        <li><a href="/">Icon Here</a></li>
         <li><a href="/">Report Job</a></li>
         <li><a href="/">Find Job</a></li>
         <li><a href="/">About Us</a></li>
-        <li><a href="/">How to</a></li>
+        <li><a href="/">How To</a></li>
       </ul>
     </nav>
-    <div class="container">
+    <div class="container first">
+
       <div class="flex-box">
-        <h1 class="first">Log In</h1>
+        <h1>CREATE ACCOUNT</h1>
         <p>Hello World!</p>
         <p>This page will be the log-in page for the site (I guess???).</p>
         <p>please work for the love of god</p>
+        <br><br>
+        <button>Create Account</button>
       </div>
 
       <div class="flex-box">
-        <h1 class="first">Log In</h1>
+        <h1>LOG IN</h1>
         <p>Hello World!</p>
         <p>This page will be the log-in page for the site (I guess???).</p>
         <p>please work for the love of god</p>
+        <br><br>
+        <button>Log In</button>
       </div>
+
     </div>
   </body>
 </html>
