--- a/public/documents/reportJob.html
+++ b/public/documents/reportJob.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>p1</title>
+    <title>Report Job</title>
+    <link rel="stylesheet" href="css/loginStyle.css" />
+    <link rel="stylesheet" href="css/reportJob.css" />
   </head>
   <body>
-    <h1>test</h1>
+    <nav>
+      <ul>
+        <li><a>Icon Here</a></li>
+        <li><a href="/">Report Job</a></li>
+        <li><a href="/">Find Job</a></li>
+        <li><a href="/">About Us</a></li>
+        <li><a href="/">How To</a></li>
+      </ul>
+    </nav>
+    <h1></h1>
   </body>
 </html>
